<?xml version="1.0" encoding="utf-8" ?>
<resources>
<string name="app_name">Clean Addis</string>

<string name="report_name">Report</string>
<string name="post_name">Post</string>
<string name="news_name">News</string>
<string name="teaching_name">Teaching</string>
<string name="preference_file_key">"user_data"</string>
<string name="title_add_picture">Media</string>
<string name="title_home">Home</string>
<string name="title_account">Account</string>
<string name="title_setting">Settings</string>

<<<<<<< HEAD
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <
    <
    <
    <
    <
    <
    < HEAD

    <string name="nav_header_username">Username</string>

    =======
    <string name="title_report">Report title</string>
    <string name="report_header">Report header</string>
    <string name="report_date">Report dates</string>
    <string name="report_summary_text">Report summary</string>
    >>>>>>> 14f865db55ec1675d8203d1e43beaa84279fdd6a

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <
    <
    <
    <
    <
    <
    < HEAD
    <string name="fragment_after_media_choosen_friends">FRIENDS</string>
    <string name="fragment_after_media_choosen_friends_of_friends">FRIENDS OF FRIENDS</string>
    <string name="fragment_after_media_choosen_me_only">ME ONLY</string>
    <string name="fragment_after_media_choosen_all">ALL</string>
    <string name="fragment_after_media_choosen_downloadable">Downloadable</string>
    <string name="fragment_after_media_choosen_article">Article</string>
    <string name="fragment_after_media_choosen_use_for_articles">Use for articles</string>
    <string name="fragment_after_media_choosen_dont_use_for_article">Dont use for article</string>
    <string name="fragment_after_media_choosen_descritpion">Descritpion</string>
    <string name="fragment_after_media_choosen_post">Post</string>
    <string name="fragment_post_textview">TextView</string>
    <string name="fragment_post_account_username">Username</string>
    <string name="fragment_post_account_edit_profile">Edit Profile</string>
    <string name="fragment_post_account_no">No</string>
    <string name="fragment_post_account_friends">Friends</string>
    <string name="fragment_post_account_posts">Posts</string>
    <string name="fragment_post_account_posts">Posts</string>
    <string name="fragment_post_account_second_no">no</string>
    <string name="fragment_post_account_request">Request</string>
    <string name="fragment_teaching_rec_all_about_trash">All About Trash</string>
    <string name="fragment_rec_long_description">Long Description</string>
    <string name="selectpicturetopost_choose_video_n_from_gallery">Video from Gallery</string>
    <string name="selectpicturetopost_take_video_n_by_camera">Video by camera</string>
    <string name="selectpicturetopost_choose_picture_n_from_gallery">Picture from Gallery</string>
    <string name="selectpicturetopost_take_picture_n_by_camera">Picture by camera</string>
    <string name="single_description_titleof_the_single_stuff">titleof the single stuff</string>
    <string name="single_description_textview">TextView</string>
    <string name="single_post_display_textview">TextView</string>
    <string name="single_post_display_textviewtwo">TextView</string>
    <string name="single_post_display_textviewthree">TextView</string>
    <string name="single_post_display_name">Name</string>
    <string name="single_category_teaching_title">Title</string>
    <string name="teaching_title_of_the_page">Title Of the page</string>
    <string name="teaching_description">A small description about the page</string>
    <string name="teaching_more">More</string>
    <string name="teaching_next">Next</string>
    <string name="teaching_nrec_non_recyclable">Non-Recyclable</string>
    <string name="teaching_nrec_description">Description</string>
    <string name="teaching_nrec_more">More</string>
    <string name="teaching_nrec_next">Next</string>
    <string name="teaching_nrec_button">Back</string>
    <string name="teaching_rec_recyclable">Recyclable</string>
    <string name="teaching_rec_description">Description</string>
    <string name="teaching_rec_more">More</string>
    <string name="teaching_rec_next">Next</string>
    <string name="teaching_rec_button">Button</string>
    =======

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="report_email">report email</string>
    <string name="report_category">report category</string>
    <string name="account_name">account name</string>
    <string name="password">password</string>
    <string name="username_or_email">Email/username</string>
    <string name="lastname">lastname</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="firstname">firstname</string>
    <string name="phonenumber">phonenumber</string>
<<<<<<< HEAD
    <string name="rec_recycleable_trash">Recycleable Trash</string>
    >>>>>>> 14f865db55ec1675d8203d1e43beaa84279fdd6a
=======
    <string name="report_message">Your message..</string>
>>>>>>> e3b77cace2c565ad96836ee286f8ec41c567d987
</resources>
=======
<string name="navigation_drawer_open">Open navigation drawer</string>
<string name="navigation_drawer_close">Close navigation drawer</string>
<string name="nav_header_title">Android Studio</string>
<string name="nav_header_subtitle">android.studio@android.com</string>
<string name="nav_header_desc">Navigation header</string>
<string name="action_settings">Settings</string>
<string name="title_report">Report title</string>
<string name="report_header">Report header</string>
<string name="report_date">Report dates</string>
<string name="report_summary_text">Report summary</string>

<string name="title_dashboard">Dashboard</string>
<string name="title_notifications">Notifications</string>
<string name="nav_header_username">Username</string>

<string name="hello_blank_fragment">Hello blank fragment</string>
<string name="report_email">report email</string>
<string name="report_category">report category</string>
<string name="account_name">account name</string>
<string name="password">password</string>
<string name="username_or_email">Email/username</string>
<string name="lastname">lastname</string>
<string name="username">username</string>
<string name="email">email</string>
<string name="firstname">firstname</string>
<string name="phonenumber">phonenumber</string>
<string name="report_message">Your message..</string>
<string name="impact_of_waste">Impact of waste</string>
<string name="fragment_after_media_choosen_friends">FRIENDS</string>
<string name="fragment_after_media_choosen_friends_of_friends">FRIENDS OF FRIENDS</string>
<string name="fragment_after_media_choosen_me_only">ME ONLY</string>
<string name="fragment_after_media_choosen_all">ALL</string>
<string name="fragment_after_media_choosen_downloadable">Downloadable</string>
<string name="fragment_after_media_choosen_article">Article</string>
<string name="fragment_after_media_choosen_use_for_articles">Use for articles</string>
<string name="fragment_after_media_choosen_dont_use_for_article">Dont use for article</string>
<string name="fragment_after_media_choosen_descritpion">Descritpion</string>
<string name="fragment_after_media_choosen_post">Post</string>
<string name="fragment_post_textview">TextView</string>
<string name="fragment_post_account_username">Username</string>
<string name="fragment_post_account_edit_profile">Edit Profile</string>
<string name="fragment_post_account_no">No</string>
<string name="fragment_post_account_friends">Friends</string>
<string name="fragment_post_account_posts">Posts</string>
<string name="fragment_post_account_second_no">no</string>
<string name="fragment_post_account_request">Request</string>
<string name="fragment_teaching_rec_all_about_trash">All About Trash</string>
<string name="fragment_rec_long_description">Long Description</string>
<string name="selectpicturetopost_choose_video_n_from_gallery">Video from Gallery</string>
<string name="selectpicturetopost_take_video_n_by_camera">Video by camera</string>
<string name="selectpicturetopost_choose_picture_n_from_gallery">Picture from Gallery</string>
<string name="selectpicturetopost_take_picture_n_by_camera">Picture by camera</string>
<string name="single_description_titleof_the_single_stuff">titleof the single stuff</string>
<string name="single_description_textview">TextView</string>
<string name="single_post_display_textview">TextView</string>
<string name="single_post_display_textviewtwo">TextView</string>
<string name="single_post_display_textviewthree">TextView</string>
<string name="single_post_display_name">Name</string>
<string name="single_category_teaching_title">Title</string>
<string name="teaching_title_of_the_page">Title Of the page</string>
<string name="teaching_description">A small description about the page</string>
<string name="teaching_more">More</string>
<string name="teaching_next">Next</string>
<string name="teaching_nrec_non_recyclable">Non-Recyclable</string>
<string name="teaching_nrec_description">Description</string>
<string name="teaching_nrec_more">More</string>
<string name="teaching_nrec_next">Next</string>
<string name="teaching_nrec_button">Back</string>
<string name="teaching_rec_recyclable">Recyclable</string>
<string name="teaching_rec_description">Description</string>
<string name="teaching_rec_more">More</string>
<string name="teaching_rec_next">Next</string>
<string name="teaching_rec_button">Button</string>
<string name="rec_recycleable_trash">Recycleable Trash</string>
    </resources>
>>>>>>> 1e134995d476569c612b5ed24358e3472a76afe0
