<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
<<<<<<< HEAD
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_news"
=======
            android:id="@+id/article_screen"
            android:icon="@drawable/ic_menu_camera"
>>>>>>> 1e134995d476569c612b5ed24358e3472a76afe0
            android:title="@string/news_name" />
        <item
                android:id="@+id/nav_postFragment"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/post_name"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/teaching_name" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/report_name" />
    </group>

</menu>
