<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.iyoa.cleanaddis.controller.report.ReportDetailFragment">

    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/report_title_textview"
            android:text="@string/title_report"
            app:layout_constraintTop_toBottomOf="@+id/report_header_textview" android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/report_detail_profile_divider" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <com.google.android.material.textfield.TextInputEditText
            android:text="@string/report_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/report_header_textview"
            app:layout_constraintStart_toEndOf="@+id/report_detail_profile_divider"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/report_title_textview"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="677dp"
            app:layout_constraintBottom_toTopOf="@+id/report_title_textview"/>
    <ImageView
            app:srcCompat="@drawable/ic_account_circle_black_24dp"
            android:layout_width="62dp"
            android:layout_height="68dp" android:id="@+id/report_detail_profile_imageview"
            app:layout_constraintEnd_toStartOf="@+id/report_detail_profile_divider" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="@+id/report_detail_sent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/report_title_textview"/>
    <View
            android:id="@+id/report_detail_profile_divider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider"
            tools:layout_editor_absoluteY="16dp" tools:layout_editor_absoluteX="75dp"/>
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/report_detail_date" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/report_detail_sent"
            app:layout_constraintStart_toEndOf="@+id/report_detail_profile_divider"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:text="@string/report_date"/>
    <com.google.android.material.textfield.TextInputEditText
            android:text="@string/report_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/report_detail_sent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/report_title_textview"
            app:layout_constraintStart_toEndOf="@+id/report_detail_profile_divider" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <com.google.android.material.textfield.TextInputEditText
            android:text="@string/report_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/report_detail_reciever"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/report_detail_date"
            app:layout_constraintStart_toEndOf="@+id/report_detail_profile_divider" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <com.google.android.material.textfield.TextInputEditText
            android:text="@string/report_summary_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/report_detail_reciever"
            app:layout_constraintStart_toEndOf="@+id/report_detail_profile_divider"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"
            android:id="@+id/report_detail_message"/>


</androidx.constraintlayout.widget.ConstraintLayout>
