<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context="com.iyoa.cleanaddis.controller.account.SignupFragment">
    <com.google.android.material.textfield.TextInputEditText android:layout_width="0dp"
                                                             android:layout_height="wrap_content"
                                                             app:layout_constraintStart_toStartOf="parent"
                                                             android:layout_marginLeft="8dp"
                                                             android:layout_marginStart="8dp"
                                                             app:layout_constraintEnd_toStartOf="@+id/divider16"
                                                             android:layout_marginEnd="8dp"
                                                             android:layout_marginRight="8dp"
                                                             android:id="@+id/firstname_edittext"
                                                             android:layout_marginTop="32dp"
                                                             app:layout_constraintTop_toBottomOf="@+id/check_imageview"
                                                             android:hint="@string/firstname"/>
    <com.google.android.material.textfield.TextInputEditText android:layout_width="0dp"
                                                             android:layout_height="wrap_content"
                                                             app:layout_constraintStart_toStartOf="@+id/username_editText"
                                                             app:layout_constraintEnd_toEndOf="@+id/username_editText"
                                                             android:id="@+id/email_edittext"
                                                             android:layout_marginTop="32dp"
                                                             app:layout_constraintTop_toBottomOf="@+id/username_editText"
                                                             android:hint="@string/email"/>
    <com.google.android.material.textfield.TextInputEditText android:layout_width="0dp"
                                                             android:layout_height="wrap_content"
                                                             android:id="@+id/username_editText"
                                                             app:layout_constraintEnd_toEndOf="@+id/phonenumber"
                                                             app:layout_constraintStart_toStartOf="@+id/phonenumber"
                                                             android:hint="@string/username"
                                                             android:layout_marginTop="32dp"
                                                             app:layout_constraintTop_toBottomOf="@+id/phonenumber"/>
    <com.google.android.material.textfield.TextInputEditText android:layout_width="0dp"
                                                             android:layout_height="wrap_content"
                                                             android:id="@+id/lastname_edittxt"
                                                             app:layout_constraintStart_toEndOf="@+id/divider16"
                                                             app:layout_constraintEnd_toEndOf="parent"
                                                             android:layout_marginEnd="8dp"
                                                             android:layout_marginRight="8dp"
                                                             android:layout_marginTop="32dp"
                                                             app:layout_constraintTop_toBottomOf="@+id/check_imageview"
                                                             android:hint="@string/lastname"/>
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/email_edittext"
            app:layout_constraintStart_toStartOf="@+id/email_edittext" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/email_edittext" android:hint="@string/password"/>
    <ImageView
            app:srcCompat="@drawable/ic_check_circle_black_24dp"
            android:layout_width="51dp"
            android:layout_height="48dp" android:id="@+id/check_imageview"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/lastname_edittxt" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.945"
            app:layout_constraintBottom_toTopOf="@+id/lastname_edittxt"/>
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/phonenumber" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/firstname_edittext"
            android:hint="@string/phonenumber"/>
    <View
            android:id="@+id/divider16"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent" tools:layout_editor_absoluteY="-16dp"
            android:layout_marginLeft="196dp" android:layout_marginStart="196dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
