<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context="controller.posting.SelectPictureToPostFragment">

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="365dp" android:id="@+id/guideline8"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="203dp" android:id="@+id/guideline9"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/selectpicturetopost_choose_video_n_from_gallery"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:id="@+id/button_video_from_gallery" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline8" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toStartOf="@+id/guideline9"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/selectpicturetopost_take_video_n_by_camera"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:id="@+id/button_video_from_camera" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline8" app:layout_constraintStart_toStartOf="@+id/guideline9"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/selectpicturetopost_choose_picture_n_from_gallery"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:id="@+id/button_image_from_gallery"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline8" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/selectpicturetopost_take_picture_n_by_camera"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_image_from_camera"
            android:layout_marginTop="8dp"
            android:background="@drawable/button"
            app:layout_constraintTop_toTopOf="@+id/guideline8" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline9" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
