<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".controller.teaching.TeachingRecyclable" android:id="@+id/frameSecond">

    <!-- TODO: Update blank fragment layout -->

<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="283dp" android:id="@+id/REC1"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="463dp" android:id="@+id/REC2"/>
    <ImageView
            app:srcCompat="@drawable/ic_rec"
            android:layout_width="136dp"
            android:layout_height="107dp"
            android:id="@+id/Recycelimg" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/REC1" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <com.google.android.material.textfield.TextInputEditText
            android:text="@string/teaching_rec_recyclable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RECTitle"
            app:layout_constraintTop_toTopOf="@+id/REC1" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <com.google.android.material.textfield.TextInputEditText
            android:text="@string/teaching_rec_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RECDescription"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintBottom_toTopOf="@+id/REC2"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/REC1"/>

    <com.google.android.material.button.MaterialButton
            android:text="@string/teaching_rec_more"
            android:textColor="#FFFFFF"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RecycleButton" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/REC2"
            android:background="@drawable/button"
    />
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="317dp"
            android:id="@+id/guideline19"/>

    <com.google.android.material.button.MaterialButton
            android:text="@string/teaching_rec_next"
            android:textColor="#FFFFFF"
            android:layout_width="68dp"
            android:layout_height="36dp"
            android:background="@drawable/button"
            android:id="@+id/button4" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="@+id/guideline20"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/REC2"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="106dp"
            android:id="@+id/guideline22"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/teaching_rec_button"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:layout_width="68dp"
            android:layout_height="36dp"
            android:id="@+id/button3" app:layout_constraintEnd_toStartOf="@+id/guideline22"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/REC2"/>
</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
